--- a/lesson02-hw/todolist-02/src/App.css
+++ b/lesson02-hw/todolist-02/src/App.css
@@ -51,8 +51,8 @@ body {
 .toggle {
   display: inline-block;
   position: relative;
-  right: -80%;
-  bottom: 280px;
+  left: 100px;
+  bottom: 20px;
   height: 45px;
   width: 90px;
   border-radius: 99em;
