remove extra comps

--- a/lesson02-hw/todolist-02/src/App.css
+++ b/lesson02-hw/todolist-02/src/App.css
@@ -188,6 +188,8 @@ form {
   align-items: center;
   justify-content: center;
   color: #222;
+  border: none;
+  background: none;
 }
 
 
@@ -203,4 +205,8 @@ form {
   background-color: #0000004d;
   color: #fff;
   border-radius: 10%;
+}
+
+.task-item .completed {
+  text-decoration: line-through;
 }
