--- a/demo/demo/src/App.css
+++ b/demo/demo/src/App.css
@@ -1,5 +1,11 @@
 .nav-bar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  text-decoration: none;
+  list-style-type: none;
+}
+a, a:visited, a:active {
+  text-decoration: none;
+
 }
