--- a/ecommerce-hw/src/App.css
+++ b/ecommerce-hw/src/App.css
@@ -1,38 +1,46 @@
-.App {
+:root {
+  --primary-color: #EABF00;
+}
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+body {
+  font-size: .9rem;
+  font-family: 'Nunito Sans', sans-serif;
+  padding: 80px 0;
+  position: relative;
+}
+
+.img-container {
+  max-height: 320px;
+  width: 100%;
   text-align: center;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.img-container:hover {
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-container img {
+  width: 100%;
+  object-fit: cover;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.product-item {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  gap: 10px;
+  height: 160px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
