--- a/ecommerce-hw/src/App.css
+++ b/ecommerce-hw/src/App.css
@@ -1,5 +1,6 @@
 :root {
-  --primary-color: #EABF00;
+  --primary-color: #eabf00;
+  --text-color: #1b1a20;
 }
 * {
   box-sizing: border-box;
@@ -11,36 +12,21 @@ a:visited {
   text-decoration: none;
 }
 body {
-  font-size: .9rem;
-  font-family: 'Nunito Sans', sans-serif;
+  font-size: 0.9rem;
+  font-family: "Fira Sans", sans-serif;
   padding: 80px 0;
   position: relative;
+  max-width: 1200px;
 }
-
-.img-container {
-  max-height: 320px;
-  width: 100%;
-  text-align: center;
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
+.column-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  margin-top: 50px;
 }
-
-
-
-.img-container:hover {
-  cursor: pointer;
-}
-
-.img-container img {
-  width: 100%;
-  object-fit: cover;
-}
-.product-item {
+.list-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  gap: 10px;
-  height: 160px;
+  flex-wrap: wrap;
+  margin-top: 25px;
 }
+
 
