--- a/ecommerce-hw/src/Components/Cart/Cart.css
+++ b/ecommerce-hw/src/Components/Cart/Cart.css
@@ -31,7 +31,8 @@
     background-color: #1B1A20;
     color: #ececec;
     text-align: center;
-    width: 400px;
+    position: relative;
+    z-index: 2000;
 
 }
 .cart-content .cart-title {
@@ -45,24 +46,41 @@
     padding-bottom: 200px;
 }
 .checkout-section {
-    padding: 5%;}
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 200px;
+    padding: 5%;
+}
 .fee-checkout {
     display: flex;
     justify-content: space-between;
+    color: #5B5A5E;
+    text-transform: uppercase;
+    margin: 16px 0px;
+    font-weight: 600;
+    align-items: center;
+    font-size: 1em;
+}
+.total-price{
+    color: #EABF00;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 .cart .my-btn {
     background-color: #0C0B10;
-    color: #fff;
-    padding: 15px 0px;
-    margin-top: 40px;    
     cursor: pointer;
     width: 100%;
     border: 0px;
     transition: background-color 0.2s ease 0s;
     font-family: "Fira Sans", sans-serif;
     text-transform: uppercase;
+    font-size: 1.2em;
+}
 
-
+.cart .my-btn .inactive {
+  background-color: #cccccc;
+  color: #666666;
 }
 
 .my-btn:hover {
